--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             <p class="contactstext">Për ç’do pyetje, ju lutem, telefononi ose shkruani:</p>
         <div class="contactsfoot">
             <div>
-                <div class="cont"><a href="tel:+38269777986">+382 69 777-986</a></div>
-                <div class="cont"><a href="mailto:info@hausmn.com">info@hausmn.com</a></div>
+                <div class="cont"><a href="tel:+38269777986">+382 69 777-986</a><span style="font-weight: 500;"> - Anglisht, Serbisht, Rusisht</span></div>
+                <div class="cont"><a href="mailto:info@hausmn.com">info@hausmn.com</a><span style="font-weight: 500;"> - Do gjuhë</span></div>
             </div>
             </div>
             <div class="footermenu">
